/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package com.dremio.common.logging;

option java_package = "com.dremio.common.logging";
option optimize_for = SPEED;
option java_multiple_files = true;
option java_outer_classname = "StructuredLogDataProtobuf";

message StructuredLogData {
  string id = 1;
  string message = 2;
  int64 start = 3;
  int64 finish = 4;
  string optional_message = 5;
}
